--- a/Exercicio 2 a 6/.vscode/launch.json
+++ b/Exercicio 2 a 6/.vscode/launch.json
@@ -10,11 +10,11 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/exercicio1/bin/Debug/net6.0/exercicio1.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/Exercicio 2 a 6.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/exercicio1",
+            "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
-            "console": "integratedTerminal",
+            "console": "internalConsole",
             "stopAtEntry": false
         },
         {
